# CI-Lib

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  SECURITY.md  docker-compose.yml  install_r_packages.R  pyproject.toml  r_requirements.txt  requirements-dev.txt  requirements-web.txt  requirements.txt
.github/: FUNDING.yml
.github/workflows/: blank.yml  ci.yml
backend/: app.py  config.py  models.py  routes.py
ci_lib/: __init__.py
ci_lib/clustering/: __init__.py  dbscan.py  kmeans.py
ci_lib/evolutionary/: __init__.py  differential.py  genetic.py
ci_lib/fuzzy/: __init__.py  inference.py  rules.py  sets.py  variables.py
ci_lib/neural/: __init__.py  activations.py  feedforward.py
ci_lib/optimization/: __init__.py  gradient_descent.py  simulated_annealing.py
ci_lib/swarm/: __init__.py  aco.py  pso.py
ci_lib/utils/: __init__.py  benchmarks.py  metrics.py  preprocessing.py
ci_lib/viz/: __init__.py  python_viz.py  r_bridge.py
ci_lib/viz/r_scripts/: ggplot_templates.R
experiments/: convergence_comparison.py
frontend/: app.py  shiny_integration.py
tankdozer/: __init__.py  __main__.py  cli.py
tankdozer/modules/: analyze.py  ioc.py  ir.py  report.py  scan.py
tankdozer/utils/: display.py  io.py
tests/: test_clustering.py  test_evolutionary.py  test_fuzzy.py  test_neural.py  test_optimization.py  test_swarm.py  test_utils.py
thesis/: main.tex  references.bib
