[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-lib"
version = "1.1.0"
description = "A pure-NumPy computational intelligence library for optimisation, learning, and decision-making"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "William Majanja"},
]
keywords = ["computational-intelligence", "neural-networks", "evolutionary-algorithms", "swarm-intelligence", "fuzzy-logic", "clustering", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "streamlit>=1.35",
    "matplotlib>=3.8",
]
viz = [
    "plotly>=5.18",
    "bokeh>=3.3",
    "altair>=5.2",
    "seaborn>=0.13",
    "networkx>=3.2",
    "pyvis>=0.3",
    "folium>=0.15",
    "statsmodels>=0.14",
    "scipy>=1.11",
    "pandas>=2.1",
    "geopandas>=0.14",
    "pyvista>=0.43",
    "panel>=1.3",
]
r = [
    "rpy2>=3.5.0",
]
all = [
    "ci-lib[dev,web,viz,r]",
]

[project.urls]
Homepage = "https://github.com/WilliamMajanja/Partial-Realpart-Analysis-"
Documentation = "https://github.com/WilliamMajanja/Partial-Realpart-Analysis-"
Repository = "https://github.com/WilliamMajanja/Partial-Realpart-Analysis-"

[project.scripts]
tankdozer = "tankdozer.cli:cli"

[tool.setuptools.packages.find]
include = ["ci_lib*", "backend*", "frontend*", "tankdozer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
